# RandPlay

./: .gitignore  AGENTS.md  CLAUDE.md  CMAKE_CONFIG.md  CMakeLists.txt  RCa06704  RCa13336  RCa16628  README.md  RandPlay.cpp  RandPlay.rc  RandPlay.res  build.bat  lang_en.rc  resource.h
.claude/: settings.local.json
agent_docs/: win32-cn.md
docs/: CLEANUP_REPORT.md
include/: pch.h
resources/: RandPlay.rc  RandPlay_en.rc  RandPlay_zh_cn.rc
resources/strings/: lang_en.rc  lang_zh_cn.rc
scripts/: README.md  build.bat  build_en.bat  build_release.bat  dev.bat  functions.bat  functions_en.bat  simple_build.bat
scripts/cleanup/: cleanup_legacy_files.bat
scripts/common/: functions.bat
scripts/dev/: info.bat  open_vs.bat  quick.bat  run.bat  test_multilang.bat
src/: main.cpp
src/constants/: AppConstants.h  ResourceIds.h
src/core/: FileIndexer.cpp  FileIndexer.h  HotkeyManager.cpp  HotkeyManager.h  LanguageManager.cpp  LanguageManager.h  ResourceDLL.cpp  Settings.cpp  Settings.h  Utils.cpp  Utils.h
src/ui/: UIHelpers.cpp  UIHelpers.h
